<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imagen_de_fondo"
    tools:context=".JuegoDeAciertos">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="136dp"
        android:layout_height="124dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012"
        app:srcCompat="@drawable/ic_map" />

    <fragment
        android:id="@+id/fragment"
        android:name="com.example.tema4.PaisesFragment"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <fragment
        android:id="@+id/fragment2"
        android:name="com.example.tema4.CiudadesFragment"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment" />

    <TextView
        android:id="@+id/txtPais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/paises"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="@+id/fragment"
        app:layout_constraintStart_toStartOf="@+id/fragment"
        app:layout_constraintTop_toBottomOf="@+id/fragment" />

    <TextView
        android:id="@+id/txtCiudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/ciudades"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="@+id/fragment2"
        app:layout_constraintStart_toStartOf="@+id/fragment2"
        app:layout_constraintTop_toBottomOf="@+id/fragment2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pais"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="@+id/fragment"
        app:layout_constraintStart_toStartOf="@+id/fragment"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ciudad"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="@+id/fragment2"
        app:layout_constraintStart_toStartOf="@+id/fragment2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/button5"
        style="@style/BtnPpl.BtnPrim"
        android:layout_marginTop="20dp"
        android:onClick="checkPair"
        android:text="@string/btnHitGame"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/txtPais" />

    <ImageView
        android:id="@+id/imgAcierto"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="50dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintVertical_bias="0.100000024"
        app:srcCompat="?attr/colorControlHighlight" />

</androidx.constraintlayout.widget.ConstraintLayout>